Add instructions scene and fix gameplay flow

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Game Scenes -->
     <script src="js/scenes/TitleScene.js"></script>
     <script src="js/scenes/StoryScene.js"></script>
+    <script src="js/scenes/InstructionsScene.js"></script>
     <script src="js/scenes/GameScene.js"></script>
     
     <!-- Main Game Entry Point -->
